traefik2.0/IngressRoute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-webui
  namespace: kube-system
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`traefik2.k8s.niewx.club`)
    kind: Rule
    services:
    - name: traefik
      port: 8080
