traefik2.0/ingressroute-redis.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: redis
spec:
  entryPoints:
    - redis
  routes:
  - match: HostSNI(`redis.k8s.niewx.club`)
    services:
    - name: redis
      port: 6379
